Move header breadcrumb truncation fix to the base breadcrumb component

--- a/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
+++ b/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
@@ -6,5 +6,4 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
-  min-width: 0; // Ensure it shrinks if the window is narrow
 }
